# OCUDU-RAN

./: .gitignore  CMakeLists.txt  README.md  build.sh
apps/: CMakeLists.txt
apps/du/: CMakeLists.txt  du.cpp  du_appconfig.h  du_appconfig_cli11_schema.cpp  du_appconfig_validators.cpp  du_appconfig_yaml_writer.cpp  du_low_main.cpp  fapi_stats.cpp  fapi_stats.h  fapi_stats_decorators.h  fapi_stats_record.h  fapi_stats_serializers.cpp  fapi_stats_serializers.h  fapi_xsm_logger.h  fapi_xsm_proxy.h  fapi_xsm_transport.cpp  fapi_xsm_transport.h
apps/du_low/: du_low_appconfig.h  du_low_appconfig_cli11_schema.cpp  du_low_appconfig_validators.cpp  du_low_appconfig_yaml_writer.cpp
apps/examples/: CMakeLists.txt
apps/examples/ofh/: CMakeLists.txt  ru_emulator.cpp  ru_emulator_appconfig.h  ru_emulator_cli11_schema.cpp
apps/examples/srs_inline_benchmark/: CMakeLists.txt  srs_inline_benchmark.cpp
apps/helpers/metrics/json_generators/du_high/: scheduler.cpp
apps/services/worker_manager/: worker_manager.cpp  worker_manager_config.h
apps/units/flexible_o_du/: o_du_unit.h
apps/units/flexible_o_du/o_du_high/du_high/: du_high_config.h  du_high_config_cli11_schema.cpp  du_high_config_translators.cpp  du_high_config_validator.cpp  du_high_config_yaml_writer.cpp
apps/units/flexible_o_du/o_du_high/du_high/metrics/consumers/: scheduler_metrics_consumers.cpp
apps/units/flexible_o_du/split_6/o_du_high/: CMakeLists.txt  split6_o_du_impl.cpp  split6_o_du_impl.h  split6_plugin_dummy.cpp  split6_plugin_dummy.h  split6_plugin_xsm.cpp  split6_plugin_xsm.h
apps/units/flexible_o_du/split_6/o_du_low/: CMakeLists.txt  split6_flexible_o_du_low_session.cpp  split6_o_du_low_plugin_dummy.cpp  split6_o_du_low_plugin_xsm.cpp  split6_o_du_low_plugin_xsm.h
apps/units/flexible_o_du/split_7_2/helpers/: ru_ofh_config.h  ru_ofh_config_cli11_schema.cpp  ru_ofh_config_translator.cpp  ru_ofh_config_yaml_writer.cpp
apps/units/flexible_o_du/split_helpers/: CMakeLists.txt  flexible_o_du_configs.h  flexible_o_du_factory.cpp  flexible_o_du_impl.cpp
apps/units/o_cu_cp/cu_cp/: cu_cp_config_translators.cpp  cu_cp_unit_config.h  cu_cp_unit_config_cli11_schema.cpp  cu_cp_unit_config_yaml_writer.cpp
configs/: config.yaml  config_o1.yaml  du_liteon_zmq.yaml  du_liteon_zmq_10mhz.yaml  du_liteon_zmq_40mhz.yaml  du_liteon_zmq_40mhz_4slice.yaml  emu.yml  emu_srs_replay.yml  gpu_inline_acc_gnb.yml  ml_mcs_example.yaml  ocudu_xfapi_oai.yaml  odu_high_xfapi.yaml  odu_low_xfapi.yaml
docs/: DEPLOYMENT.md  fapi_split_topologies.md
include/ocudu/cu_cp/: cell_meas_manager_config.h  du_processor_context.h  mobility_management_metrics.h
include/ocudu/du/: du_cell_config.h
include/ocudu/ngap/: ngap_context.h
include/ocudu/ofh/: ofh_sector_config.h
include/ocudu/ru/: ru_adapters.h
include/ocudu/scheduler/: scheduler_metrics.h
include/ocudu/support/: fapi_split_trace.h  mac_phy_handoff_timing.h  mac_phy_latency_injector.h  srs_result_tap.h  srs_schedule_tap.h
include/ocudu/xsm/: CMakeLists.txt
include/ocudu/xsm/xsm/: xsm.h
lib/: CMakeLists.txt
lib/cu_cp/: cu_cp_impl.cpp
lib/cu_cp/cell_meas_manager/: cell_meas_manager_impl.cpp  slice_aware_matching.h
lib/cu_cp/mobility_manager/: mobility_manager_impl.cpp  mobility_manager_impl.h
lib/du/du_high/: du_high_clock_controller_factory.cpp  du_high_executor_mapper.cpp
lib/fapi/: CMakeLists.txt
lib/fapi/serialization/: CMakeLists.txt  fapi_message_type_id.h  fapi_serialization_buffer.h  fapi_serializer_common.h  fapi_serializer_p5.cpp  fapi_serializer_p5.h  fapi_serializer_p7_dl.cpp  fapi_serializer_p7_dl.h  fapi_serializer_p7_ind.cpp  fapi_serializer_p7_ind.h  fapi_serializer_p7_ul.cpp  fapi_serializer_p7_ul.h  fapi_xsm_message_header.h
lib/fapi_adaptor/mac/: mac_fapi_sector_fastpath_adaptor_impl.cpp  mac_fapi_sector_fastpath_adaptor_impl.h
lib/hal/: CMakeLists.txt
lib/hal/cuda/: CMakeLists.txt  dpdk_gpu_ethernet_receiver.cpp  gpu_dpdk_mempool.cpp  gpu_rx_buffer.cpp  inline_prach_pipeline.cpp  inline_srs_pipeline.cpp  prach_detector_inline_impl.cpp  prach_detector_inline_impl.h  prach_detector_inline_kernels.cu  prach_detector_inline_kernels.h  prach_flow_rules.cpp  prach_inline_bfp_kernel.cu  srs_estimator_inline_impl.cpp  srs_inline_bfp_kernel.cu  srs_inline_estimator_kernels.cu  srs_inline_estimator_kernels.h  vram_prach_buffer.cpp  vram_srs_buffer.cpp
lib/hal/dpdk/: dpdk.cpp
lib/hal/dpdk/bbdev/: CMakeLists.txt  bbdev_acc.cpp  bbdev_acc_factory.cpp  bbdev_op_pool_factory.cpp
lib/hal/phy/upper/channel_processors/: CMakeLists.txt  hw_accelerator_factories.cpp  hw_accelerator_pdsch_enc_bbdev_impl.cpp  hw_accelerator_pdsch_enc_bbdev_impl.h
lib/hal/phy/upper/channel_processors/pusch/: CMakeLists.txt  hw_accelerator_factories.cpp  hw_accelerator_pusch_dec_bbdev_impl.cpp  hw_accelerator_pusch_dec_bbdev_impl.h
lib/ipc/: CMakeLists.txt
lib/ipc/xsm/: CMakeLists.txt  xsm_context.cpp  xsm_context.h
lib/ngap/: ngap_impl.cpp
lib/ngap/ngap_validators/: ngap_validators.cpp  ngap_validators.h
lib/ngap/procedures/: ngap_pdu_session_resource_setup_procedure.cpp  ngap_pdu_session_resource_setup_procedure.h
lib/ofh/: CMakeLists.txt  ofh_factories.cpp
lib/ofh/ethernet/dpdk/: CMakeLists.txt  dpdk_ethernet_factories.cpp  dpdk_ethernet_port_context.cpp
lib/ofh/receiver/: ofh_message_receiver_impl.cpp  ofh_message_receiver_impl.h  ofh_receiver_impl.cpp
lib/ofh/support/: prach_context_repository.h
lib/ofh/timing/: realtime_timing_worker.cpp
lib/phy/metrics/: phy_metrics_factories.cpp  phy_metrics_hwacc_pdsch_enc_decorator.h  phy_metrics_hwacc_pusch_dec_decorator.h
lib/phy/upper/: uplink_processor_impl.cpp  upper_phy_factories.cpp
lib/ran/pucch/: pucch_info.cpp
lib/scheduler/: cell_scheduler.cpp
lib/scheduler/logging/: CMakeLists.txt  (+5 more)
lib/support/: CMakeLists.txt  fapi_split_trace.cpp  mac_phy_handoff_timing.cpp  mac_phy_latency_injector.cpp
ml/: README.md  ml_config.py
ml/analysis/: analyse.py
ml/models/: mcs_ml_seed.model
ml/serving/: online_trainer.py
ml/training/: train_export_mcs.py
scripts/: prach_ab_benchmark.sh
(+67 files in other folders)
